--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,6 @@
-# Ignore directories
-/modules/*/terraform.tfstate*
-/modules/*/terraform.tfstate.backup
-/modules/*/.*.tfstate
-/modules/*/terraform.tfvars
-/modules/*/terraform-provider-*
-
-root/.terraform/*
-/root/terraform.tfstate
-/root/terraform.tfstate.backup
-/root/terraform.tfvars
-/root/.terraform.lock.hcl
-
-# Ignore specific files
-/modules/*/id_rsa.pub
+# Ignore Terraform files and directories
+*.tfstate
+*.tfstate.*
+.terraform/
+terraform.tfstate.backup
+*.tfvars
